--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "node ./src/*",
     "server": "nodemon ./bin/www",
     "client": "PORT=3002 npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "build": "tsc"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
