--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/circular-json": "^0.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "json-cyclic": "^1.0.2",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "path": "^0.12.7"
   },
   "main": "app.js",
   "keywords": [],
